crates/ty_server/tests/e2e/snapshots/e2e__will_rename_files__directory_rename.snap
---
source: crates/ty_server/tests/e2e/will_rename_files.rs
expression: edits
---
{
  "documentChanges": [
    {
      "textDocument": {
        "version": null,
        "uri": "file://<temp_dir>/consumer.py"
      },
      "edits": [
        {
          "range": {
            "start": {
              "line": 0,
              "character": 5
            },
            "end": {
              "line": 0,
              "character": 12
            }
          },
          "newText": "new_pkg"
        }
      ]
    }
  ]
}
