crates/ty_server/tests/e2e/snapshots/e2e__will_rename_files__simple_rename.snap
---
source: crates/ty_server/tests/e2e/will_rename_files.rs
expression: edits
---
{
  "changes": {
    "file://<temp_dir>/consumer.py": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 17
          }
        },
        "newText": "new_module"
      },
      {
        "range": {
          "start": {
            "line": 2,
            "character": 6
          },
          "end": {
            "line": 2,
            "character": 16
          }
        },
        "newText": "new_module"
      }
    ]
  }
}
